lesson49/kube/script/kubernetes/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels: &wordpress
    app: php
    project: wordpress
spec:
  replicas: 1
  selector:
    matchLabels: *wordpress
  template:
    metadata:
      labels: *wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:6.0.0-apache
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-data
          mountPath: /var/www/html
      volumes:
      - name: wordpress-data
        persistentVolumeClaim:
          claimName: wordpress-data
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels: &wordpress
    app: php
    project: wordpress
spec:
  selector: *wordpress
  ports:
  - port: 80
    targetPort: 80
