lesson49/kube/script/kubernetes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels: &wordpress-nginx
    app: nginx
    project: wordpress
spec:
  selector:
    matchLabels: *wordpress-nginx
  template:
    metadata:
      labels: *wordpress-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: wordpress.conf
      volumes:
      - name: config
        configMap:
          name: nginx-config
          items:
            - key: wordpress.conf
              path: wordpress.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels: &wordpress-nginx
    app: nginx
    project: wordpress
spec:
  selector: *wordpress-nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
spec:
  tks: 
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx
              port: 
                number: 80
